@@ -158,7 +158,7 @@ class WeblinksModelCategory extends JModelList
 		$id = JRequest::getVar('id', 0, '', 'int');
 		$this->setState('category.id', $id);
 
-		$this->setState('filter.published',	1);
+		$this->setState('filter.state',	1);
 
 		$this->setState('filter.language',$app->getLanguageFilter());
 
